fix: allow parsing of standard default types
