# demo_app/open_api_spec.json
@@ -249,6 +249,30 @@
                 "deprecated": false
             }
         },
+        "/query_float": {
+            "get": {
+                "parameters": [
+                    {
+                        "name": "secret",
+                        "in": "query",
+                        "schema": {
+                            "title": "Secret",
+                            "type": "number"
+                        },
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful Response",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "deprecated": false
+            }
+        },
         "/query_multivalue_param": {
             "get": {
                 "parameters": [
